# sansmic

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  build_docs.py  pyproject.toml  requirements-dev.txt  requirements-exe.txt  requirements.txt  setup.py
.github/: .codecov.yml  codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  question.md
.github/workflows/: build-wheels.yml  codeql.yml  continuous-integration.yml  continuous-release.yml  continuous-testing.yml  executable.yml  gh-pages.yml  publish-release.yml  pytest-workflow.yml  pytest.yml  release.yml  scorecard.yml  semantic-release.yml  test-continuous.yml  test-linux.yml  test-macOS_arm.yml  test-macOS_intel.yml  test-matrix.yml  test-pypi-release.yml  test-windows.yml  test.yml
docs/: _config.yml  build_all.py  conf.py  index.rst  nomenclature.rst  references.bib  references.rst  refman.rst  requirements.txt  userman.rst
docs/_static/: switcher.json
docs/_templates/autosummary/: base.rst  class.rst  exception.rst
docs/um/: getting-started.rst  intro.rst  outputs.rst  running-sansmic.rst  scenarios.rst
examples/: baseline.json  baseline.tst  basic.ipynb  regression.ipynb
src/ext_modules/libsansmic/: basemodel.cpp  jetmodel.cpp  libsansmic.cpp  libsansmic.hpp  model.cpp  odesolver.cpp  plumerise.cpp  salt.cpp  sansmic.hpp  scenario.cpp  smoke.cxx  stage.cpp  util.cpp
src/python/sansmic/: __init__.py  _progress_bar.py  _version.py  app.py  empirical.py  enums.py  io.py  model.py
tests/: baseline.ddl  baseline.dra.txt  baseline.out  baseline.rad  baseline.tst.txt  ordinary-f90.ddl  ordinary-f90.dra  ordinary-f90.rad  ordinary-f90.tst  requirements.txt  test_app.py  test_basic.py  test_io.py  test_model.py  test_regression.py
