[project]
name = "sansmic"
description = "Sandia solution mining modeling software"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0.0"
authors = [
    { name = "National Technology & Engineering Solutions of Sandia, LLC (NTESS)" },
    { name = "SANSMIC Authors (see AUTHORS.md)" },
]
maintainers = [{ name = "David Hart", email = "david.hart@sandia.gov" }]
dependencies = ["numpy", "pandas", 'tomli; python_version < "3.11"']
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    'Intended Audience :: End Users/Desktop',
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
formats = ['h5py', 'openpyxl', 'tabulate', 'pyyaml', 'lasio']
docs = [
    'Sphinx',
    'pydata-sphinx-theme',
    'sphinx_design',
    'sphinxcontrib-bibtex',
    'breathe',
    'exhale',
    'sphinx-argparse',
]
dev = [
    'pre-commit',
    'pyproject_hooks',
    'black',
    'pybind11',
    'pytest',
    'pytest-cov',
]
tests = [
    'pytest',
    'pytest-cov',
    'h5py',
    'openpyxl',
    'tabulate',
    'pyyaml',
    'lasio',
]

[project.urls]
Documentation = "https://sandialabs.github.io/sansmic"
Issues = "https://github.com/sandialabs/sansmic/issues"
Repository = "https://github.com/sandialabs/sansmic.git"

[project.scripts]
sansmic = "sansmic.app:main"
sansmic-convert = "sansmic.app:convert"

[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["cp313-*", "pp*", "*-win32", "*-manylinux_i686", "*-musllinux*"]
test-extras = "tests"
test-command = "pytest {project}/tests"

[tool.setuptools.package-data]
"sansmic" = ["src/python/sansmic/*.pyd"]

[tool.setuptools.package-dir]
sansmic = "src/python/sansmic"

[tool.semantic_release]
assets = []
build_command_env = []
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = false
repo_dir = "."
no_git_verify = false
tag_format = "v{version}"

version_toml = [
    "pyproject.toml:project.version"
]
version_variables = [
    "setup.py:__version__",
    "src/python/sansmic/__init__.py:__version__",
    "docs/conf.py:version",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false
